New/flipkart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-app
  namespace: noel-ns
  labels:
    app: flipkart
spec:
  replicas: 4
  selector:
    matchLabels:
      app: flipkart
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: flipkart
    spec:
      containers:
        - name: flipkart-container
          image: muralisocial123/flipkart-clone-kuberox:v1.1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata: 
  name: flipkart-service
  namespace: noel-ns
spec:
  selector:
    app: flipkart
  ports:
    - targetPort: 80
      port: 81
      protocol: TCP
  type: ClusterIP
