New/flower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-app
  namespace: noel-ns
  labels:
    app: flower
spec:
  replicas: 4
  selector:
    matchLabels:
      app: flower
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
        - name: flower-container
          image: muralisocial123/kyndrl-flower-app:v1.1.0
          ports:
            - containerPort: 3015
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata: 
  name: fl-service
  namespace: noel-ns
spec:
  selector:
    app: flower
  ports:
    - targetPort: 3015
      port: 3016
      protocol: TCP
  type: ClusterIP
